@@ -203,9 +203,9 @@ public class ManualNackRecordTests {
 				this.pollLatch.countDown();
 				switch (which.getAndIncrement()) {
 					case 0:
-						return new ConsumerRecords(records1);
+						return new ConsumerRecords(records1, Map.of());
 					case 1:
-						return new ConsumerRecords(records2);
+						return new ConsumerRecords(records2, Map.of());
 					default:
 						try {
 							Thread.sleep(1000);
@@ -213,7 +213,7 @@ public class ManualNackRecordTests {
 						catch (InterruptedException e) {
 							Thread.currentThread().interrupt();
 						}
-						return new ConsumerRecords(Collections.emptyMap());
+						return new ConsumerRecords(Collections.emptyMap(), Map.of());
 				}
 			}).given(consumer).poll(Duration.ofMillis(ContainerProperties.DEFAULT_POLL_TIMEOUT));
 			willAnswer(i -> {
